# backend

./: .pre-commit-config.yaml  main.py  openapi.yaml  pyproject.toml
.github/workflows/: linting.yaml
config/: schemas.py
routes/: juniagpt.py
